# petco

./: CMakeLists.txt  README.md  TODO.txt  contributors.txt  gtm-3.2.c  llsqwt.h  minc_fftw-1.0.c  minc_fftw-1.0.h  minc_helper.h  mtga.h  srtm.h
include/: .minc_helper.h.swp  convolv.h  fft.h  meshPVC.h  meshPVC_for_srv.h  minc_helper.h  mtga.h  nl-anisotropic.h
include/3x3-C/: dsytrd3.h  slvsec3.h
make/: .make_srv.swp  .make_surf_dist.swp  make_anisotropic_diffusion  make_laplace_equation  make_minc2ascii  make_minc_integrate  make_mincgroupstats  make_mincsplit  make_mincsum  make_roi_concat  make_srv  make_surf_defrag  make_surf_dist  make_tac_volume  make_tka  make_volume_dist
src/: eigen.c  idSURF-4.1.c  include  inverse.c  mincsplit.c  my_interpolate_sphere.c  surf_defrag-1.1.c  tac_volume-1.0.c  volume_dist-1.0.c
src/anisotropic _diffusion/: anisotropic_diffusion-3.0.c
src/anisotropic _diffusion/3x3-C/: dsyev2.h  dsyevh3.c  lib3x3.so.1.0.0
src/crop_from_mask/: crop_from_mask.c
src/gtm/: gaussj.c  gtm-3.2.c
src/idSURF/: idSURF-4.1.1.c  idSURF-4.1.2.c  idSURF-4.2.1.c  idSURF-4.2.c
src/join_mask_labels/: .join_mask_labels.c.swn  .join_mask_labels.c.swo  .join_mask_labels.c.swp  join_mask_labels.bkup.c  join_mask_labels.c
src/laplace_equation/: laplace_equation-1.0.c
src/minc2ascii/: minc2ascii.c
src/minc_fftw/: minc_fftw-1.0.c
src/minc_helper/: .minc_helper-1.2.c.swo  .minc_helper-1.2.c.swp  minc_helper-1.2.c
src/minc_integrate/: minc_integrate-1.0.c
src/mincgroupstats/: mincgroupstats-4.0.c
src/mincsplit/: mincsplit.c
src/mincsum/: mincsum.c
src/nl-anisotropic/: .anisotropic_diffusion-3.0.c.swp  .nl-anisotropic.c.swp  anisotropic_diffusion-3.0.c  nl-anisotropic.c  nl-anisotropic.c~
src/nl-anisotropic/3x3-C/: dsyevd3.c
src/roi_concat/: roi_concat-1.0.c
src/srv/: .my_interpolate_sphere.c.swp  my_interpolate_sphere.c  pet_input.c  ray_casting.c  rrefTest.c  srv-2.0.c  srv-2.1.c  srv-3.0.c
src/tac_volume/: tac_volume-1.0.c
src/tka/1.0/: createImage.c  fft.c  getTimes.c  llsqwt.c  nrutil.c  pet_analyze.c  pet_core.c  pet_input.c  srtm.c  tracerDatabase.c
src/tka/2.0/: tka-2.0.c
src/wm_dist/: .wm_dist-2.0.c.swp  .wm_dist-3.0.c.swn  .wm_dist-3.0.c.swp  .wm_dist.c.swp  temp.txt  wm_dist-2.0.c  wm_dist-3.0.bkp.c  wm_dist-3.0.c  wm_dist.c
temp_install/: idSURF
test/srv/: mask.txt  test.sh
